fixed text wrapping of footer email. Needed to wrap at very small devices so made special media query for it

--- a/css/styles.css
+++ b/css/styles.css
@@ -455,11 +455,18 @@ a {
   position: absolute;
   padding-top: 30px; }
   .footer-container .footer-wrapper {
-    max-width: 960px; }
+    max-width: 960px;
+    display: block;
+    margin: 0 auto; }
   .footer-container .footer-details {
     color: white;
     text-align: left;
     padding-left: 30px; }
+    .footer-container .footer-details .email-word-break {
+      display: inline; }
+  @media screen and (max-width: 360px) {
+    .footer-container .footer-details .email-word-break {
+      display: block; } }
 
 .text-center {
   text-align: center; }
