--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -68,5 +68,6 @@ $btn-height: 45px;
 
 
 //Media queries
+$mobile-media-very-small: 360px;
 $mobile-media: 767px;
 $tablet-media: 1025px;
