--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -7,11 +7,25 @@
 
 	.footer-wrapper{
 		max-width: $container-width;
+		display: block;
+    	margin: 0 auto;		
 	}	
 
 	.footer-details{
 	    color: white;
 	    text-align: left;
 	    padding-left: 30px;
+
+	    .email-word-break{
+	    	display:inline;
+	    }
+	}
+
+	@media screen and (max-width: $mobile-media-very-small){
+		.footer-details{
+			.email-word-break{
+				display: block;
+			}
+		}	
 	}
 }
